@@ -1,3 +1,5 @@
 # If you want to fill this file with all avalible options run the following command:
-# nscp settings --generate ini --add-defaults --load-all
-F For details run: nscp settings --help
+#   nscp settings --generate --add-defaults --load-all
+# If you want to activate a module and bring in all its options use:
+#   nscp settings --activate-module <MODULE NAME> --add-defaults
+# For details run: nscp settings --help
