@@ -65,41 +65,51 @@ IF(WIN32)
 	)
 	
 	ADD_DEFINITIONS(-D_WIN32_DCOM)
-
-	
-#	SET(
-#		CMAKE_LINKER_FLAGS 
-#		/MANIFEST 
-#		/MANIFESTFILE:"${CMAKE_CURRENT_SOURCE_DIR}/NSClient++.manifest"
-#	)
-#	SET(
-#		CMAKE_MODULE_LINKER_FLAG 
-#		/MANIFEST 
-#		/MANIFESTFILE:"${CMAKE_CURRENT_SOURCE_DIR}/NSClient++.manifest"
-#	)
-
 ENDIF(WIN32)
+
+ADD_DEFINITIONS(${NSCP_GLOBAL_DEFINES})
+
+# Add python
+IF(PYTHONLIBSEX_FOUND)
+	SET(EXTRA_LIBS ${EXTRA_LIBS} ${PYTHON_LIBRARIES})
+ENDIF(PYTHONLIBSEX_FOUND)
+
+# Add breakpad
 IF(BREAKPAD_FOUND)
+	ADD_EXECUTABLE(${TARGET}nobp ${service_SRCS})
+
+	TARGET_LINK_LIBRARIES(${TARGET}nobp
+		${Boost_FILESYSTEM_LIBRARY}
+		${Boost_PROGRAM_OPTIONS_LIBRARY}
+		${Boost_THREAD_LIBRARY}
+		${NSCP_DEF_PLUGIN_LIB}
+		${EXTRA_LIBS}
+		settings_manager
+	)
+	INSTALL(TARGETS ${TARGET}nobp RUNTIME DESTINATION .)
+	IF(WIN32)
+		INSTALL(CODE "SET(PDB_FULL_PATH ${BUILD_TARGET_EXE_PATH}/${TARGET}nobp.pdb)")
+		INSTALL(CODE "FILE(INSTALL DESTINATION \${CMAKE_INSTALL_PREFIX} TYPE EXECUTABLE FILES \${PDB_FULL_PATH})")
+	ENDIF(WIN32)
+	SET_TARGET_PROPERTIES(${TARGET}nobp PROPERTIES FOLDER "core")
+
+
 	SET(service_SRCS ${service_SRCS} ${NSCP_INCLUDEDIR}/breakpad/exception_handler_win32.cpp)
 	IF(WIN32)
 		SET(service_SRCS ${service_SRCS} ${NSCP_INCLUDEDIR}/breakpad/exception_handler_win32.hpp)
 	ENDIF(WIN32)
 	SET(EXTRA_LIBS ${BREAKPAD_COMMON_LIBRARY} ${BREAKPAD_EXCEPTION_HANDLER_LIBRARY} ${BREAKPAD_CRASH_GENERATION_CLIENT_LIBRARY})
-	ADD_DEFINITIONS(-DUSE_BREAKPAD)
 	INCLUDE_DIRECTORIES(${BREAKPAD_INCLUDE_DIR})
 ENDIF(BREAKPAD_FOUND)
 
-ADD_DEFINITIONS(${NSCP_GLOBAL_DEFINES})
 
-add_executable (${TARGET} ${service_SRCS})
 
-MESSAGE(STATUS "All libraries: ${Boost_FILESYSTEM_LIBRARY}, ${NSCP_DEF_PLUGIN_LIB}, ${EXTRA_LIBS}")
+ADD_EXECUTABLE(${TARGET} ${service_SRCS})
+IF(BREAKPAD_FOUND)
+	SET_TARGET_PROPERTIES(${TARGET} PROPERTIES COMPILE_FLAGS -DUSE_BREAKPAD)
+ENDIF(BREAKPAD_FOUND)
 
-IF(PYTHONLIBSEX_FOUND)
-	SET(EXTRA_LIBS ${EXTRA_LIBS} ${PYTHON_LIBRARIES})
-ENDIF(PYTHONLIBSEX_FOUND)
-
-target_link_libraries(${TARGET}
+TARGET_LINK_LIBRARIES(${TARGET}
 	${Boost_FILESYSTEM_LIBRARY}
 	${Boost_PROGRAM_OPTIONS_LIBRARY}
 	${Boost_THREAD_LIBRARY}
@@ -107,20 +117,17 @@ target_link_libraries(${TARGET}
 	${EXTRA_LIBS}
 	settings_manager
 )
-#IF(WIN32)
-#	SET_TARGET_PROPERTIES(${TARGET} PROPERTIES LINK_FLAGS "/MANIFESTUAC:\"level='requireAdministrator' uiAccess='false'\" /SUBSYSTEM:WINDOWS")
-#ENDIF(WIN32)
 INSTALL(TARGETS ${TARGET} RUNTIME DESTINATION .)
 IF(WIN32)
 	INSTALL(CODE "SET(PDB_FULL_PATH ${BUILD_TARGET_EXE_PATH}/${TARGET}.pdb)")
 	INSTALL(CODE "FILE(INSTALL DESTINATION \${CMAKE_INSTALL_PREFIX} TYPE EXECUTABLE FILES \${PDB_FULL_PATH})")
 ENDIF(WIN32)
+SET_TARGET_PROPERTIES(${TARGET} PROPERTIES FOLDER "core")
 
 SOURCE_GROUP("NSCP API" REGULAR_EXPRESSION .*include/nscapi/.*)
 SOURCE_GROUP("Settings" REGULAR_EXPRESSION .*include/settings/.*)
 SOURCE_GROUP("Common Files" REGULAR_EXPRESSION .*include/.*)
 
-SET_TARGET_PROPERTIES(${TARGET} PROPERTIES FOLDER "core")
 
 IF(GTEST_FOUND)
 	INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIR})
