@@ -1,3 +1,3 @@
 version=0.4.1
-build=65
-date=2012-11-17
+build=66
+date=2012-11-18
