@@ -4,7 +4,13 @@ TODO:
  * Fix dependonservice LanManWorkStation (old win)
  * Fix RtlStringFromGUID problem on NT4
 
-2012-11-16 MickeM
+2012-11-18 MickeM
+ * Created nscpnobp.exe which is a version without break pad for older machines (windows 2000 and nt4).
+   This can only be foundin the zip file (not the msi)
+ * Added some missing file to zip
+ * Removed counters.defs since it is not used anymore
+
+2012-11-17 MickeM
  * CheckEventLog: Added debug message lisgin all loaded filters to make it simpler to detect missing once
  * SimpleCache: Added keywords not-found-msg and not-found-code option to configure the outcome of "item not found".
     check_cache index=foobar "not-found-code=Doch! item was not found" not-found-code=critical
